V4 - Fixed text overflow

--- a/LAMANSYS/FE/todo-list/src/app/app.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/app.component.scss
@@ -3,6 +3,7 @@
 .wrapper{    
     margin: 0 auto;
     height: 100vh;
+    width: 100vw;
     max-width: 32rem;
     padding: 0 1.5rem;
     box-sizing: unset; //so the padding doesn't take part of the max-width
